# Hermes-Operational-Checkpoint-Plugin

./: .gitignore  README.md  __init__.py  conftest.py  operational_checkpoint.toml  plugin.yaml  pyproject.toml
operational_checkpoint/: __init__.py  activation.py  compressor.py  helpers.py  prompt.py  sidecar.py
tests/: test_operational_checkpoint.py
