[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "operational-checkpoint"
version = "0.1.0"
description = "Hermes Operational Checkpoint plugin: a continuation-first context engine for long-running tasks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["PyYAML>=6"]
license = { text = "MIT" }
authors = [{ name = "ReyJ94" }]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
]

[project.entry-points."hermes_agent.plugins"]
operational_checkpoint = "operational_checkpoint"

[project.scripts]
operational-checkpoint-config = "operational_checkpoint.activation:main"

[tool.setuptools.package-data]
operational_checkpoint = ["operational_checkpoint.toml"]

[tool.pytest.ini_options]
addopts = "--ignore=__init__.py"
testpaths = ["tests"]
pythonpath = ["."]
